// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders basic button 1`] = `
.c0 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 14px;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #00a8d8;
  --focus-color: 0,168,216;
}

.c0:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c0:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c0:active,
.c0.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c0:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c0[disabled] {
  pointer-events: none;
}

.c0[disabled]:after {
  display: block;
}

.c0 {
  margin-right: 0.625em;
}

<button
  className="c0"
/>
`;

exports[`renders different purpose buttons 1`] = `
.c0 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 14px;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #00a8d8;
  --focus-color: 0,168,216;
}

.c0:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c0:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c0:active,
.c0.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c0:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c0[disabled] {
  pointer-events: none;
}

.c0[disabled]:after {
  display: block;
}

.c0 {
  margin-right: 0.625em;
}

<button
  className="c0"
/>
`;

exports[`renders different purpose buttons 2`] = `
.c0 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 14px;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #999;
  --focus-color: 153,153,153;
}

.c0:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c0:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c0:active,
.c0.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c0:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c0[disabled] {
  pointer-events: none;
}

.c0[disabled]:after {
  display: block;
}

.c0 {
  margin-right: 0.625em;
}

<button
  className="c0"
/>
`;

exports[`renders different purpose buttons 3`] = `
.c0 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 14px;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #4caf50;
  --focus-color: 76,175,80;
}

.c0:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c0:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c0:active,
.c0.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c0:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c0[disabled] {
  pointer-events: none;
}

.c0[disabled]:after {
  display: block;
}

.c0 {
  margin-right: 0.625em;
}

<button
  className="c0"
/>
`;

exports[`renders different purpose buttons 4`] = `
.c0 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 14px;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #ef5350;
  --focus-color: 239,83,80;
}

.c0:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c0:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c0:active,
.c0.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c0:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c0[disabled] {
  pointer-events: none;
}

.c0[disabled]:after {
  display: block;
}

.c0 {
  margin-right: 0.625em;
}

<button
  className="c0"
/>
`;

exports[`renders different size buttons 1`] = `
.c0 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 16.625px;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #00a8d8;
  --focus-color: 0,168,216;
}

.c0:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c0:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c0:active,
.c0.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c0:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c0[disabled] {
  pointer-events: none;
}

.c0[disabled]:after {
  display: block;
}

.c0 {
  margin-right: 0.625em;
}

<button
  className="c0"
/>
`;

exports[`renders different size buttons 2`] = `
.c0 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 12.25px;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #00a8d8;
  --focus-color: 0,168,216;
}

.c0:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c0:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c0:active,
.c0.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c0:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c0[disabled] {
  pointer-events: none;
}

.c0[disabled]:after {
  display: block;
}

.c0 {
  margin-right: 0.625em;
}

<button
  className="c0"
/>
`;

exports[`renders outlined button 1`] = `
.c0 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 14px;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #00a8d8;
  --focus-color: 0,168,216;
  background-color: #fff;
  color: #00a8d8;
  box-shadow: 0 0 0 1px #00a8d8;
}

.c0:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c0:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c0:active,
.c0.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c0:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c0[disabled] {
  pointer-events: none;
}

.c0[disabled]:after {
  display: block;
}

.c0:hover {
  color: #222;
  box-shadow: 0 0 0 1px #222;
}

.c0:focus {
  box-shadow: 0 0 0 1px #00a8d8, 0 0 0 5px rgba(var(--focus-color),0.15);
}

.c0 {
  margin-right: 0.625em;
}

<button
  className="c0"
/>
`;
